--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
             <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
             <title>WebStudio</title>
         </head>
-        <header class="header">
-        <!-- #region Header -->
+        <body>
+            <header class="header">
+            <!-- #region Header -->
             <div class="container-header">
                 <nav class="header-nav">
                     <a class="logo" href="./index.html">Web<span>Studio</span></a>
                     <ul class="links">
-                        <li><a class="menu-item" href="./index.html">Studio</a></li>
+                        <li class="accent"><a class="menu-item-accent" href="./index.html">Studio</a></li>
                         <li><a class="menu-item" href="">Portfolio</a></li>
                         <li><a class="menu-item" href="">Contacts</a></li>
                     </ul>
@@ -28,9 +29,9 @@
                     </ul>
                 </address> 
             </div> <!-- #endregion Header -->
-        </header>
-        <main>
-        <!-- #region Button -->    
+            </header>
+            <main>
+            <!-- #region Button -->    
             <section class="section-solution">
                 <div class="container">
                     <h1 class="solution">Effective Solutions for Your Business</h1>
@@ -38,27 +39,48 @@
                 </div>    
             </section>
         <!-- #endregion Button -->
-        <!-- #region  Advantages-->
+            <!-- #region  Advantages-->
             <section class="advantages-head">
                 <div class=container>
                     <h2 class=visually-hidden>Advantages</h2>
                     <ul class="advantages">
                         <li class="adventegs-list-item">
+                            <div class="advantage-icon">
+                                <svg class="advantage-icon-image" width="64" height="64">
+                                    <use href="./images/icons.svg#icon-antenna"></use>
+                                </svg>
+                            </div>
+                            </svg>
                             <h3 class="advantages-title">Strategy</h3>
                             <p class="advantages-text">Our goal is to identify the business
                                 problem to walk away with the perfect and creative solution.</p>
                         </li>
                         <li class="adventegs-list-item">
+                            <div class="advantage-icon">
+                                <svg class="advantage-icon-image" width="64" height="64">
+                                <use href="./images/icons.svg#icon-clock"></use>
+                                </svg>
+                            </div>
                             <h3 class="advantages-title">Punctuality</h3>
                             <p class="advantages-text">Bring the key message to the brand's audience for the best price within the shortest
                                 possible time.</p>
                         </li>
                         <li class="adventegs-list-item">
+                            <div class="advantage-icon">
+                                <svg class="advantage-icon-image" width="64" height="64">
+                                    <use href="./images/icons.svg#icon-diagram"></use>
+                                </svg>
+                            </div>
                             <h3 class="advantages-title">Diligence</h3>
                             <p class="advantages-text">Research and confirm brands with the strongest digital growth opportunities and
                                 minimize risk.</p>
                         </li>
                         <li class="adventegs-list-item">
+                            <div class="advantage-icon">
+                                <svg class="advantage-icon-image" width="64" height="64">
+                                    <use href="./images/icons.svg#icon-astronaut"></use>
+                                </svg>
+                            </div>
                             <h3 class="advantages-title">Technologies</h3>
                             <p class="advantages-text">Design practice focused on digital experiences. We bring forth a deep passion for
                                 problem-solving.</p>
@@ -67,7 +89,7 @@
                 </div>
             </section>
         <!-- #endregion  Advantages-->
-        <!-- #region  Our Team-->
+            <!-- #region  Our Team-->
             <Section class="our-team">
                 <div class="container column-container">
                     <h2 class="our-team-main">Our Team</h2>
@@ -77,6 +99,36 @@
                             <div class="our-team-name">
                                 <h3 class="our-team-title">Mark Guerrero</h3>
                                 <p class="our-team-text">Product Designer</p>
+                                <ul class="our-team-social-list">
+                                    <li>
+                                        <a class="our-team-link" href="https://www.instagram.com/" target="_blank">
+                                            <svg class="our-team-icon" viewBox="0 0 40 40" width="16" height="16">
+                                                <use href="./images/icons.svg#icon-instagram"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="our-team-link" href="https://x.com/" target="_blank">
+                                            <svg class="our-team-icon" viewBox="0 0 40 40" width="16" height="16">
+                                                <use href="./images/icons.svg#icon-twitter"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="our-team-link" href="https://www.facebook.com/" target="_blank">
+                                            <svg class="our-team-icon" width="16" height="16">
+                                                <use href="./images/icons.svg#icon-facebook"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="our-team-link" href="https://ua.linkedin.com/" target="_blank">
+                                            <svg class="our-team-icon" width="16" height="16">
+                                                <use href="./images/icons.svg#icon-linkedin"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                </ul>
                             </div>
                         </li>
                         <li class="our-team-item">
@@ -84,6 +136,36 @@
                             <div class="our-team-name">
                                 <h3 class="our-team-title">Tom Ford</h3>
                                 <p class="our-team-text">Frontend Developer</p>
+                                <ul class="our-team-social-list">
+                                    <li>
+                                        <a class="our-team-link" href="https://www.instagram.com/" target="_blank">
+                                            <svg class="our-team-icon" viewBox="0 0 40 40" width="16" height="16">
+                                                <use href="./images/icons.svg#icon-instagram"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="our-team-link" href="https://x.com/" target="_blank">
+                                            <svg class="our-team-icon" viewBox="0 0 40 40" width="16" height="16">
+                                                <use href="./images/icons.svg#icon-twitter"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="our-team-link" href="https://www.facebook.com/" target="_blank">
+                                            <svg class="our-team-icon" width="16" height="16">
+                                                <use href="./images/icons.svg#icon-facebook"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="our-team-link" href="https://ua.linkedin.com/" target="_blank">
+                                            <svg class="our-team-icon" width="16" height="16">
+                                                <use href="./images/icons.svg#icon-linkedin"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                </ul>
                             </div>
                         </li>
                         <li class="our-team-item">
@@ -91,6 +173,36 @@
                             <div class="our-team-name">
                                 <h3 class="our-team-title">Camila Garcia</h3>
                                 <p class="our-team-text">Marketing</p>
+                                <ul class="our-team-social-list">
+                                    <li>
+                                        <a class="our-team-link" href="https://www.instagram.com/" target="_blank">
+                                            <svg class="our-team-icon" viewBox="0 0 40 40" width="16" height="16">
+                                                <use href="./images/icons.svg#icon-instagram"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="our-team-link" href="https://x.com/" target="_blank">
+                                            <svg class="our-team-icon" viewBox="0 0 40 40" width="16" height="16">
+                                                <use href="./images/icons.svg#icon-twitter"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="our-team-link" href="https://www.facebook.com/" target="_blank">
+                                            <svg class="our-team-icon" width="16" height="16">
+                                                <use href="./images/icons.svg#icon-facebook"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="our-team-link" href="https://ua.linkedin.com/" target="_blank">
+                                            <svg class="our-team-icon" width="16" height="16">
+                                                <use href="./images/icons.svg#icon-linkedin"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                </ul>
                             </div>
                         </li>
                         <li class="our-team-item">
@@ -98,6 +210,36 @@
                             <div class="our-team-name">
                                 <h3 class="our-team-title">Camila Garcia</h3>
                                 <p class="our-team-text">Marketing</p>
+                                <ul class="our-team-social-list">
+                                    <li>
+                                        <a class="our-team-link" href="https://www.instagram.com/" target="_blank">
+                                            <svg class="our-team-icon" viewBox="0 0 40 40" width="16" height="16">
+                                                <use href="./images/icons.svg#icon-instagram"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="our-team-link" href="https://x.com/" target="_blank">
+                                            <svg class="our-team-icon" viewBox="0 0 40 40" width="16" height="16">
+                                                <use href="./images/icons.svg#icon-twitter"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="our-team-link" href="https://www.facebook.com/" target="_blank">
+                                            <svg class="our-team-icon" width="16" height="16">
+                                                <use href="./images/icons.svg#icon-facebook"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="our-team-link" href="https://ua.linkedin.com/" target="_blank">
+                                            <svg class="our-team-icon" width="16" height="16">
+                                                <use href="./images/icons.svg#icon-linkedin"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                </ul>
                             </div>
                         </li>
                     </ul>
@@ -105,7 +247,7 @@
                 
             </Section>
         <!-- #endregion  Our Team-->
-        <!-- #region  Portfolio-->
+            <!-- #region  Portfolio-->
         <section class="portfolio">
             <div class="container column-container">
                 <h2 id="portfolio" class="portfolio-title">Our Portfolio</h2>
@@ -156,12 +298,13 @@
             </div>
             </section>
         <!-- #endregion  Portfolio-->
-        </main>
-        <footer class="footer">
+            </main>
+            <footer class="footer">
             <div class="container footer-container">
                 <a class="logo-foot" id=footer href="./index.html">Web<span class="footer-logo">Studio</span></a>
                 <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth
                     solutions.</p>
             </div>
-        </footer>
+            </footer>
+        </body>
     </html>
