--- a/index.html
+++ b/index.html
@@ -301,9 +301,46 @@
             </main>
             <footer class="footer">
             <div class="container footer-container">
-                <a class="logo-foot" id=footer href="./index.html">Web<span class="footer-logo">Studio</span></a>
-                <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth
-                    solutions.</p>
+                <ul class="footer-list">
+                    <li>
+                        <a class="logo-foot" id=footer href="./index.html">Web<span class="footer-logo">Studio</span></a>
+                        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth
+                            solutions.</p>
+                    </li>
+                    <li>
+                        <p class="social">Social media</p>
+                        <ul class="our-team-social-list">
+                            <li>
+                                <a class="our-team-link" href="https://www.instagram.com/" target="_blank">
+                                    <svg class="our-team-icon" viewBox="0 0 40 40" width="16" height="16">
+                                        <use href="./images/icons.svg#icon-instagram"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li>
+                                <a class="our-team-link" href="https://x.com/" target="_blank">
+                                    <svg class="our-team-icon" viewBox="0 0 40 40" width="16" height="16">
+                                        <use href="./images/icons.svg#icon-twitter"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li>
+                                <a class="our-team-link" href="https://www.facebook.com/" target="_blank">
+                                    <svg class="our-team-icon" width="16" height="16">
+                                        <use href="./images/icons.svg#icon-facebook"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li>
+                                <a class="our-team-link" href="https://ua.linkedin.com/" target="_blank">
+                                    <svg class="our-team-icon" width="16" height="16">
+                                        <use href="./images/icons.svg#icon-linkedin"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
             </div>
             </footer>
         </body>
