--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
                 <nav class="header-nav">
                     <a class="logo" href="./index.html">Web<span>Studio</span></a>
                     <ul class="links">
-                        <li class="accent"><a class="menu-item-accent" href="./index.html">Studio</a></li>
+                        <li class="menu-item"><a class="menu-item-accent" href="./index.html">Studio</a></li>
                         <li><a class="menu-item" href="">Portfolio</a></li>
                         <li><a class="menu-item" href="">Contacts</a></li>
                     </ul>
                 </nav>
                 <address class="contacts">
                     <ul class="contacts-list">
-                        <li><a class="contact-info" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                        <li><a class="contact-info" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                        <li class="contacts-list-item"><a class="contact-info" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                        <li class="contacts-list-item"><a class="contact-info" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
                     </ul>
                 </address> 
             </div> <!-- #endregion Header -->
@@ -50,7 +50,6 @@
                                     <use href="./images/icons.svg#icon-antenna"></use>
                                 </svg>
                             </div>
-                            </svg>
                             <h3 class="advantages-title">Strategy</h3>
                             <p class="advantages-text">Our goal is to identify the business
                                 problem to walk away with the perfect and creative solution.</p>
@@ -100,28 +99,28 @@
                                 <h3 class="our-team-title">Mark Guerrero</h3>
                                 <p class="our-team-text">Product Designer</p>
                                 <ul class="our-team-social-list">
-                                    <li>
+                                    <li class="socials">
                                         <a class="our-team-link" href="https://www.instagram.com/" target="_blank">
                                             <svg class="our-team-icon" viewBox="0 0 40 40" width="16" height="16">
                                                 <use href="./images/icons.svg#icon-instagram"></use>
                                             </svg>
                                         </a>
                                     </li>
-                                    <li>
+                                    <li class="socials">
                                         <a class="our-team-link" href="https://x.com/" target="_blank">
                                             <svg class="our-team-icon" viewBox="0 0 40 40" width="16" height="16">
                                                 <use href="./images/icons.svg#icon-twitter"></use>
                                             </svg>
                                         </a>
                                     </li>
-                                    <li>
+                                    <li class="socials">
                                         <a class="our-team-link" href="https://www.facebook.com/" target="_blank">
                                             <svg class="our-team-icon" width="16" height="16">
                                                 <use href="./images/icons.svg#icon-facebook"></use>
                                             </svg>
                                         </a>
                                     </li>
-                                    <li>
+                                    <li class="socials">
                                         <a class="our-team-link" href="https://ua.linkedin.com/" target="_blank">
                                             <svg class="our-team-icon" width="16" height="16">
                                                 <use href="./images/icons.svg#icon-linkedin"></use>
@@ -253,42 +252,60 @@
                 <h2 id="portfolio" class="portfolio-title">Our Portfolio</h2>
                 <ul class="portfolio-list">
                     <li class="portfolio-list-item">
-                        <img class="portfolio-foto" src="./images/banking-app.jpg" alt="Banking application" width="360" height="300">
+                        <div class="portfolio-wraper">
+                            <img class="portfolio-foto" src="./images/banking-app.jpg" alt="Banking application" width="360" height="300">
+                            <p class="portfolio-wraper-paragraf">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        </div>
                         <div class="portfolio-app">
                             <h3 class="portfolio-title-list">Banking App</h3>
                             <p class="portfolio-text">App</p>
                         </div>
                     </li>
                     <li class="portfolio-list-item">
-                        <img class="portfolio-foto" src="./images/cashless-payment.jpg" alt="Cashless payment" width="360" height="300">
+                        <div class="portfolio-wraper">
+                            <img class="portfolio-foto" src="./images/cashless-payment.jpg" alt="Cashless payment" width="360" height="300">
+                            <p class="portfolio-wraper-paragraf">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        </div>
                         <div class="portfolio-app">
                             <h3 class="portfolio-title-list">Cashless Payment</h3>
                             <p class="portfolio-text">Marketing</p>
                         </div>
                     </li>
                     <li class="portfolio-list-item">
-                        <img class="portfolio-foto" src="./images/meditation-app.jpg" alt="Meditation application" width="360" height="300">
+                        <div class="portfolio-wraper">
+                            <img class="portfolio-foto" src="./images/meditation-app.jpg" alt="Meditation application" width="360" height="300">
+                            <p class="portfolio-wraper-paragraf">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        </div>
                         <div class="portfolio-app">
                             <h3 class="portfolio-title-list">Meditation App</h3>
                             <p class="portfolio-text">App</p>
                         </div>
                     </li>
                     <li class="portfolio-list-item">
-                        <img class="portfolio-foto" src="./images/taxi.jpg" alt="Taxi Service" width="360" height="300">
+                        <div class="portfolio-wraper">
+                            <img class="portfolio-foto" src="./images/taxi.jpg" alt="Taxi Service" width="360" height="300">
+                            <p class="portfolio-wraper-paragraf">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        </div>
                         <div class="portfolio-app">
                             <h3 class="portfolio-title-list">Taxi Service</h3>
                             <p class="portfolio-text">Marketing</p>
                         </div>
                     </li>
                     <li class="portfolio-list-item">
-                        <img class="portfolio-foto" src="./images/screen.jpg" alt="Screen Illustrations" width="360" height="300">
+                        <div class="portfolio-wraper">
+                            <img class="portfolio-foto" src="./images/screen.jpg" alt="Screen Illustrations" width="360" height="300">
+                            <p class="portfolio-wraper-paragraf">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        </div>
                         <div class="portfolio-app">
                             <h3 class="portfolio-title-list">Screen Illustrations</h3>
                             <p class="portfolio-text">Design</p>
                         </div>
                     </li>
                     <li class="portfolio-list-item">
-                        <img class="portfolio-foto" src="./images/online.jpg" alt="Online Courses" width="360" height="300">
+                        <div class="portfolio-wraper">
+                            <img class="portfolio-foto" src="./images/online.jpg" alt="Online Courses" width="360" height="300">
+                            <p class="portfolio-wraper-paragraf">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        </div>
                         <div class="portfolio-app">
                             <h3 class="portfolio-title-list">Online Courses</h3>
                             <p class="portfolio-text">Marketing</p>
@@ -301,46 +318,44 @@
             </main>
             <footer class="footer">
             <div class="container footer-container">
-                <ul class="footer-list">
-                    <li>
-                        <a class="logo-foot" id=footer href="./index.html">Web<span class="footer-logo">Studio</span></a>
-                        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth
-                            solutions.</p>
-                    </li>
-                    <li>
-                        <p class="social">Social media</p>
-                        <ul class="our-team-social-list">
-                            <li>
-                                <a class="our-team-link" href="https://www.instagram.com/" target="_blank">
-                                    <svg class="our-team-icon" viewBox="0 0 40 40" width="16" height="16">
-                                        <use href="./images/icons.svg#icon-instagram"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                            <li>
-                                <a class="our-team-link" href="https://x.com/" target="_blank">
-                                    <svg class="our-team-icon" viewBox="0 0 40 40" width="16" height="16">
-                                        <use href="./images/icons.svg#icon-twitter"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                            <li>
-                                <a class="our-team-link" href="https://www.facebook.com/" target="_blank">
-                                    <svg class="our-team-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#icon-facebook"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                            <li>
-                                <a class="our-team-link" href="https://ua.linkedin.com/" target="_blank">
-                                    <svg class="our-team-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#icon-linkedin"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
+                <div class="footer-logo-wraper">
+                    <a class="logo-foot" id=footer href="./index.html">Web<span class="footer-logo">Studio</span></a>
+                    <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth
+                                solutions.</p>
+                </div>
+                <div class="footer-socials">
+                    <p class="social">Social media</p>
+                    <ul class="footer-social-list">
+                        <li class="footer-socials-item">
+                            <a class="footer-link" href="https://www.instagram.com/" target="_blank">
+                                <svg class="our-team-icon" viewBox="0 0 40 40" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="footer-socials-item">
+                            <a class="footer-link" href="https://x.com/" target="_blank">
+                                <svg class="our-team-icon" viewBox="0 0 40 40" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="footer-socials-item">
+                            <a class="footer-link" href="https://www.facebook.com/" target="_blank">
+                                <svg class="our-team-icon" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="footer-socials-item">
+                            <a class="footer-link" href="https://ua.linkedin.com/" target="_blank">
+                                <svg class="our-team-icon" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
             </footer>
         </body>
