--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <nav class="header-nav">
                     <a class="logo" href="./index.html">Web<span>Studio</span></a>
                     <ul class="links">
-                        <li class="menu-item"><a class="menu-item-accent" href="./index.html">Studio</a></li>
+                        <li class="menu-first"><a class="menu-item-accent" href="./index.html">Studio</a></li>
                         <li><a class="menu-item" href="">Portfolio</a></li>
                         <li><a class="menu-item" href="">Contacts</a></li>
                     </ul>
